# SimpleJSON

./: .gitignore  .travis.yml  CMakeLists.txt
SimpleJSON/: jparser.cpp
